Cambio de arquitectura y Modulo de Movimientos.
Refactor project structure and enhance UI components
- Updated file paths for shared JavaScript resources in index.html and layout.html.
- Improved layout by adding a new navigation button for movements and restructuring the title section.
- Introduced new modules for products and movements, including their respective HTML and JS files.
- Added shared resources for authentication and modal handling.
- Implemented a snackbar component for user notifications.
- Created JSON files for product and movement schemas.
- Removed outdated JS files related to previous implementations.
- Enhanced CSS styles for better UI consistency.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <!-- JS (solo referencias) -->
-  <script src="js/auth.js"></script>
+  <script src="shared/js/auth.js"></script>
 
 </body>
 </html>
