Refactorizacion de los componentes de busqueda, ordenamiento y filtros Add modulo de Inventario

--- a/modules/products/modals/product-modal.html
+++ b/modules/products/modals/product-modal.html
@@ -1,8 +1,12 @@
 <div class="modal fade" id="productModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
+      
       <div class="modal-header">
-        <h5 class="modal-title" id="productModalTitle">Producto</h5>
+        <i id="productIcon" class="bi bi-box text-primary px-2"></i>
+        <h5 class="modal-title" id="productModalTitle">
+          Producto
+        </h5>
         <button
           type="button"
           class="btn-close"
