--- a/layout.html
+++ b/layout.html
@@ -57,11 +57,115 @@
       </div>
     </nav>
 
+    <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
+    <div id="moduleControls" class="container-fluid d-none" style="padding: 10px 15px; padding-top: 70px;">
+      <!-- Header: Buscador + Ordenamiento + Botones de acción -->
+      <div class="d-flex align-items-center gap-2 flex-wrap mb-2">
+        <!-- Buscador -->
+        <div class="flex-grow-1">
+          <div class="input-group input-group-sm rounded-pill overflow-hidden border h-100">
+            <span class="input-group-text bg-primary text-white border-0 px-3">
+              <i class="bi bi-search"></i>
+            </span>
+            <input
+              type="text"
+              id="moduleSearchInput"
+              class="form-control border-0 rounded-0"
+              placeholder="Buscar..."
+            />
+            <button
+              class="btn btn-link btn-sm text-muted border-0 px-2 d-none"
+              id="moduleClearSearch"
+              type="button"
+            >
+              <i class="bi bi-x-circle"></i>
+            </button>
+          </div>
+        </div>
+
+        <!-- Control de ordenamiento (opcional) -->
+        <div class="w-auto" id="moduleSortContainer">
+          <div class="input-group input-group-sm rounded-pill overflow-hidden border h-100">
+            <select
+              class="form-select border-0 rounded-0"
+              id="moduleOrderBy"
+            >
+              <option value="" disabled selected>Ordenar…</option>
+            </select>
+            <button class="btn btn-primary border-0 rounded-0" id="moduleOrderDir">
+              <i class="bi bi-sort-alpha-down"></i>
+            </button>
+          </div>
+        </div>
+
+        <!-- Botones de acción (se agregan dinámicamente) -->
+        <div id="moduleActionButtons" class="d-flex gap-2">
+          <!-- Se llenan dinámicamente -->
+        </div>
+      </div>
+
+      <!-- Fila de filtros: Chips + Fecha + Limpiar -->
+      <div class="d-flex gap-2 mb-2 px-1" id="moduleFiltersRow">
+        <!-- Chips de filtro (fijos, se muestran/ocultan según módulo) -->
+        <div id="moduleFilterChips" class="d-flex gap-2">
+          <!-- Chip: Entradas (Movements) -->
+          <button
+            id="filterIn"
+            class="btn btn-outline-success rounded-pill btn-chip d-none"
+          >
+          <i class="bi bi-arrow-right"></i> Entradas
+          </button>
+          <!-- Chip: Salidas (Movements) -->
+          <button
+            id="filterOut"
+            class="btn btn-outline-danger rounded-pill btn-chip d-none"
+          >
+          <i class="bi bi-arrow-left"></i> Salidas
+          </button>
+          <!-- Chip: Almacén (Inventory) -->
+          <button
+            id="filterWarehouse"
+            class="btn btn-outline-dark rounded-pill btn-chip d-none"
+          >
+            <i class="bi bi-houses"></i> Almacén
+          </button>
+          <!-- Chip: Tienda (Inventory) -->
+          <button
+            id="filterStore"
+            class="btn btn-outline-success rounded-pill btn-chip d-none"
+          >
+            <i class="bi bi-shop"></i> Tienda
+          </button>
+        </div>
+
+        <!-- Filtro de fecha (opcional) -->
+        <input
+          type="date"
+          id="moduleFilterDate"
+          class="form-control form-control-sm w-auto rounded-pill d-none"
+        />
+
+        <!-- Botón limpiar filtros (siempre visible) -->
+        <button
+          class="btn btn-secondary rounded-pill btn-sm"
+          id="moduleClearFilters"
+          type="button"
+        >
+          <i class="bi bi-funnel"></i> Limpiar filtros
+        </button>
+      </div>
+
+      <!-- Contador -->
+      <div id="moduleCounter" class="text-muted small px-1 mb-2">
+        0 de 0 elementos
+      </div>
+    </div>
+
     <!-- ===== CONTENIDO DINÁMICO ===== -->
     <main
       id="app"
       class="container-fluid"
-      style="padding-top: 70px; padding-bottom: 70px"
+      style="padding-top: 0px; padding-bottom: 70px"
     >
       <!-- AQUÍ SE INYECTAN LAS PÁGINAS -->
     </main>
@@ -75,7 +179,7 @@
           id="navHome"
         >
           <div class="text-center">
-            <i class="bi bi-house fs-4"></i><br />
+            <i class="bi bi-house-door fs-4"></i><br />
             <small>Inicio</small>
           </div>
         </button>
@@ -96,8 +200,18 @@
           id="navMovements"
         >
           <div class="text-center">
-            <i class="bi bi-arrow-left-right fs-4"></i><br />
+            <i class="bi bi-arrow-repeat fs-4"></i><br />
             <small>Movimientos</small>
+          </div>
+        </button>
+        <!-- INVENTARIO -->
+        <button
+          class="btn btn-link rounded-pill text-decoration-none bottom-nav-btn"
+          id="navInventory"
+        >
+          <div class="text-center">
+            <i class="bi bi-clipboard-check fs-4"></i><br />
+            <small>Inventario</small>
           </div>
         </button>
         <!-- SETTINGS -->
@@ -124,9 +238,11 @@
     <script src="shared/js/router.js"></script>
     <script src="shared/js/modals.js"></script>
     <script src="shared/js/undo.js"></script>
+    <script src="shared/js/module-controls.js"></script>
     
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
     <script src="modules/movements/movements.js"></script>
+    <script src="modules/inventory/inventory.js"></script>
   </body>
 </html>
