--- a/modules/inventory/inventory.html
+++ b/modules/inventory/inventory.html
@@ -1,39 +1,39 @@
 <div class="container-fluid">
 
-  <!-- Lista de movimientos -->
+  <!-- Lista de inventarios -->
   <div class="container-fluid px-2 py-2">
-    <div id="movementsList" class="d-grid gap-2">
+    <div id="inventoryList" class="d-grid gap-2">
       <!-- items -->
     </div>
   </div>
 
-  <!-- TEMPLATE: Movimiento -->
-  <template id="movementCardTemplate">
+  <!-- TEMPLATE: Conteo de inventario -->
+  <template id="inventoryCardTemplate">
     <div class="card shadow-sm">
       <div class="card-body py-1 px-3">
         <div class="d-flex justify-content-between align-items-center">
           <div class="d-flex align-items-center gap-3 me-2">
             <!-- Icono -->
             <div
-              class="rounded-circle d-flex align-items-center justify-content-center movement-icon"
+              class="rounded-circle d-flex align-items-center justify-content-center inventory-icon"
               style="width:36px;height:36px"
             >
-              <i class="bi movement-icon-i text-white"></i>
+              <i class="bi inventory-icon-i text-white"></i>
             </div>
 
             <!-- Info -->
             <div class="flex-grow-1">
-              <div class="fw-semibold movement-product"></div>
-              <div class="text-muted small movement-meta"></div>
+              <div class="fw-semibold inventory-product"></div>
+              <div class="text-muted small inventory-meta"></div>
             </div>
           </div>
 
           <!-- Botones de acción -->
           <div class="d-flex gap-2">
-            <button class="btn btn-warning rounded-circle btn-sm btn-edit-movement">
+            <button class="btn btn-warning rounded-circle btn-sm btn-edit-inventory">
               <i class="bi bi-pencil"></i>
             </button>
-            <button class="btn btn-danger rounded-circle btn-sm btn-delete-movement">
+            <button class="btn btn-danger rounded-circle btn-sm btn-delete-inventory">
               <i class="bi bi-trash"></i>
             </button>
           </div>
