--- a/modules/inventory/modals/inventory-modal.html
+++ b/modules/inventory/modals/inventory-modal.html
@@ -1,6 +1,6 @@
 <div
   class="modal fade"
-  id="movementModal"
+  id="inventoryModal"
   tabindex="-1"
   aria-hidden="true"
 >
@@ -10,8 +10,8 @@
       <!-- Header -->
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i id="movementIcon" class="bi bi-arrow-right text-success"></i>
-          <span id="movementTitle">Entrada de producto</span>
+          <i id="inventoryIcon" class="bi bi-houses text-primary"></i>
+          <span id="inventoryTitle">Conteo de inventario</span>
         </h5>
         <button
           type="button"
@@ -24,37 +24,37 @@
       <!-- Body -->
       <div class="modal-body">
 
-        <!-- Toggle Button: Entrada / Salida -->
+        <!-- Toggle Button: Almacén / Tienda -->
         <div class="mb-3">
-          <label class="form-label small">Acción</label>
-          <div class="btn-group w-100 gap-4" role="group" id="movementTypeToggle">
+          <label class="form-label small">Ubicación</label>
+          <div class="btn-group w-100 gap-4" role="group" id="locationToggle">
             <input
               type="radio"
               class="btn-check"
-              name="movementType"
-              id="movementTypeIn"
-              value="in"
+              name="inventoryLocation"
+              id="locationWarehouse"
+              value="WAREHOUSE"
               checked
             />
             <label
-              class="btn btn-outline-success rounded-pill"
-              for="movementTypeIn"
+              class="btn btn-outline-primary rounded-pill"
+              for="locationWarehouse"
             >
-              <i class="bi bi-arrow-right"></i> Entrada
+              <i class="bi bi-houses"></i> Almacén
             </label>
 
             <input
               type="radio"
               class="btn-check"
-              name="movementType"
-              id="movementTypeOut"
-              value="out"
+              name="inventoryLocation"
+              id="locationStore"
+              value="STORE"
             />
             <label
-              class="btn btn-outline-danger rounded-pill"
-              for="movementTypeOut"
+              class="btn btn-outline-success rounded-pill"
+              for="locationStore"
             >
-              <i class="bi bi-arrow-left"></i> Salida
+              <i class="bi bi-shop"></i> Tienda
             </label>
           </div>
         </div>
@@ -65,7 +65,7 @@
           <input
             type="text"
             class="form-control form-control-sm"
-            id="movementProduct"
+            id="inventoryProduct"
             placeholder="Buscar producto…"
             autocomplete="off"
           />
@@ -80,8 +80,8 @@
           <input
             type="number"
             class="form-control form-control-sm"
-            id="movementQuantity"
-            min="1"
+            id="inventoryQuantity"
+            min="0"
           />
           <div class="invalid-feedback">
             Ingresá una cantidad válida
@@ -94,7 +94,7 @@
           <input
             type="date"
             class="form-control form-control-sm"
-            id="movementDate"
+            id="inventoryDate"
           />
         </div>
 
@@ -103,7 +103,7 @@
           <label class="form-label small">Observación</label>
           <textarea
             class="form-control form-control-sm"
-            id="movementNote"
+            id="inventoryNote"
             rows="2"
             placeholder="Opcional"
           ></textarea>
@@ -123,8 +123,8 @@
 
         <button
           type="button"
-          class="btn btn-success rounded-pill btn-sm"
-          id="btnConfirmMovement"
+          class="btn btn-primary rounded-pill btn-sm"
+          id="btnConfirmInventory"
         >
           Confirmar
         </button>
@@ -133,3 +133,4 @@
     </div>
   </div>
 </div>
+
