modlulo de Gastos

--- a/layout.html
+++ b/layout.html
@@ -204,6 +204,16 @@
             <small>Movimientos</small>
           </div>
         </button>
+        <!-- GASTOS -->
+        <button
+          class="btn btn-link rounded-pill text-decoration-none bottom-nav-btn"
+          id="navExpenses"
+        >
+          <div class="text-center">
+            <i class="bi bi-cash-coin fs-4"></i><br />
+            <small>Gastos</small>
+          </div>
+        </button>
         <!-- INVENTARIO -->
         <button
           class="btn btn-link rounded-pill text-decoration-none bottom-nav-btn"
@@ -244,5 +254,6 @@
     <script src="modules/products/products.js"></script>
     <script src="modules/movements/movements.js"></script>
     <script src="modules/inventory/inventory.js"></script>
+    <script src="modules/expenses/expenses.js"></script>
   </body>
 </html>
