gestión de stock bajo y stock crítico en el módulo de productos

--- a/layout.html
+++ b/layout.html
@@ -136,6 +136,20 @@
           >
             <i class="bi bi-shop"></i> Tienda
           </button>
+          <!-- Chip: Stock bajo (Products) -->
+          <button
+            id="filterLowStock"
+            class="btn btn-outline-warning rounded-pill btn-chip d-none"
+          >
+            <i class="bi bi-box"></i> Stock bajo
+          </button>
+          <!-- Chip: Stock crítico (Products) -->
+          <button
+            id="filterCriticalStock"
+            class="btn btn-outline-danger rounded-pill btn-chip d-none"
+          >
+            <i class="bi bi-box"></i> Stock crítico
+          </button>
         </div>
 
         <!-- Filtro de fecha (opcional) -->
@@ -165,7 +179,7 @@
     <main
       id="app"
       class="container-fluid"
-      style="padding-top: 0px; padding-bottom: 70px"
+      style="padding-top: 70px; padding-bottom: 70px"
     >
       <!-- AQUÍ SE INYECTAN LAS PÁGINAS -->
     </main>
