--- a/modules/products/modals/product-modal.html
+++ b/modules/products/modals/product-modal.html
@@ -51,6 +51,34 @@
               min="0"
             />
           </div>
+
+          <div class="mb-2">
+            <label class="form-label">Umbral de stock bajo</label>
+            <input
+              type="number"
+              class="form-control"
+              id="inputLowStockThreshold"
+              min="0"
+              required
+            />
+            <div class="invalid-feedback">
+              Este campo es obligatorio
+            </div>
+          </div>
+
+          <div class="mb-2">
+            <label class="form-label">Umbral de stock crítico</label>
+            <input
+              type="number"
+              class="form-control"
+              id="inputCriticalStockThreshold"
+              min="0"
+              required
+            />
+            <div class="invalid-feedback">
+              Este campo es obligatorio
+            </div>
+          </div>
         </form>
       </div>
 
