1ra version del home tipo dashboard

--- a/layout.html
+++ b/layout.html
@@ -179,7 +179,7 @@
     <main
       id="app"
       class="container-fluid"
-      style="padding-top: 70px; padding-bottom: 70px"
+      style="padding-top: 20px; padding-bottom: 70px"
     >
       <!-- AQUÍ SE INYECTAN LAS PÁGINAS -->
     </main>
@@ -264,10 +264,14 @@
     <script src="shared/js/undo.js"></script>
     <script src="shared/js/module-controls.js"></script>
     
+    <!-- Páginas compartidas JS -->
+    <script src="shared/js/home.js"></script>
+    
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
     <script src="modules/movements/movements.js"></script>
     <script src="modules/inventory/inventory.js"></script>
+    <script src="modules/expenses/expenses.js"></script>
     <script src="modules/expenses/expenses.js"></script>
   </body>
 </html>
