Agregar a la configuracion la gestión de las unidades de medidas y de los conceptos de los gastos (creación y eliminación) uso en los campos de los modals de producto y gastos las UM y Conceptos guardados

--- a/layout.html
+++ b/layout.html
@@ -266,12 +266,12 @@
     
     <!-- Páginas compartidas JS -->
     <script src="shared/js/home.js"></script>
+    <script src="shared/js/settings.js"></script>
     
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
     <script src="modules/movements/movements.js"></script>
     <script src="modules/inventory/inventory.js"></script>
-    <script src="modules/expenses/expenses.js"></script>
     <script src="modules/expenses/expenses.js"></script>
   </body>
 </html>
