--- a/modules/expenses/modals/expense-modal.html
+++ b/modules/expenses/modals/expense-modal.html
@@ -32,10 +32,7 @@
             id="expenseConcept"
           >
             <option value="" selected disabled>Seleccioná un concepto...</option>
-            <option value="Pago del guardia de seguridad">Pago del guardia de seguridad</option>
-            <option value="Pago de mercancía entrante">Pago de mercancía entrante</option>
-            <option value="Pago de compras de mercancía">Pago de compras de mercancía</option>
-            <option value="Compras en dólares">Compras en dólares</option>
+            <!-- Se llenan dinámicamente -->
           </select>
           <div class="invalid-feedback">
             Seleccioná un concepto
