Refactor del modulo de Inventario ahora el inventario se muestra por dia y poner dos listas Pendientes y Realizados, de esta forma siempre se sabe que productos faltan por hacerle el inventario del día, en el modal se introducen las cantidades en el almacen y en el area de ventas

--- a/layout.html
+++ b/layout.html
@@ -178,8 +178,7 @@
     <!-- ===== CONTENIDO DINÁMICO ===== -->
     <main
       id="app"
-      class="container-fluid"
-      style="padding-top: 20px; padding-bottom: 70px"
+      class="container-fluid px-2"
     >
       <!-- AQUÍ SE INYECTAN LAS PÁGINAS -->
     </main>
