--- a/modules/inventory/modals/inventory-modal.html
+++ b/modules/inventory/modals/inventory-modal.html
@@ -1,16 +1,10 @@
-<div
-  class="modal fade"
-  id="inventoryModal"
-  tabindex="-1"
-  aria-hidden="true"
->
+<div class="modal fade" id="inventoryModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-
       <!-- Header -->
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i id="inventoryIcon" class="bi bi-houses text-primary"></i>
+          <i class="bi bi-clipboard-check text-primary"></i>
           <span id="inventoryTitle">Conteo de inventario</span>
         </h5>
         <button
@@ -23,90 +17,60 @@
 
       <!-- Body -->
       <div class="modal-body">
-
-        <!-- Toggle Button: Almacén / Tienda -->
+        <!-- Producto (informativo) -->
         <div class="mb-3">
-          <label class="form-label small">Ubicación</label>
-          <div class="btn-group w-100 gap-4" role="group" id="locationToggle">
-            <input
-              type="radio"
-              class="btn-check"
-              name="inventoryLocation"
-              id="locationWarehouse"
-              value="WAREHOUSE"
-              checked
-            />
-            <label
-              class="btn btn-outline-primary rounded-pill"
-              for="locationWarehouse"
-            >
-              <i class="bi bi-houses"></i> Almacén
-            </label>
-
-            <input
-              type="radio"
-              class="btn-check"
-              name="inventoryLocation"
-              id="locationStore"
-              value="STORE"
-            />
-            <label
-              class="btn btn-outline-success rounded-pill"
-              for="locationStore"
-            >
-              <i class="bi bi-shop"></i> Tienda
-            </label>
-          </div>
-        </div>
-
-        <!-- Producto -->
-        <div class="mb-2">
           <label class="form-label small">Producto</label>
-          <input
-            type="text"
-            class="form-control form-control-sm"
-            id="inventoryProduct"
-            placeholder="Buscar producto…"
-            autocomplete="off"
-          />
-          <div class="invalid-feedback">
-            Seleccioná un producto
+          <div class="alert alert-light mb-0">
+            <i class="bi bi-box"></i>
+            <span class="fw-semibold" id="inventoryProductLabel">
+              Seleccionando producto...
+            </span>
           </div>
         </div>
 
-        <!-- Cantidad -->
-        <div class="mb-2">
-          <label class="form-label small">Cantidad</label>
-          <input
-            type="number"
-            class="form-control form-control-sm"
-            id="inventoryQuantity"
-            min="0"
-          />
-          <div class="invalid-feedback">
-            Ingresá una cantidad válida
+        <!-- Cantidades -->
+        <div class="d-flex gap-4">
+          <!-- Cantidad en almacén -->
+          <div class="mb-3 flex-grow-1">
+            <label class="form-label small">Almacén</label>
+            <div class="input-group input-group-sm rounded-pill overflow-hidden border">
+              <span class="input-group-text bg-primary text-white border-0 px-4">
+                <i class="bi bi-houses"></i>
+              </span>
+              <input
+                type="number"
+                id="locationWarehouseInput"
+                class="form-control border-0 rounded-0"
+                placeholder="Cantidad..."
+                min="0"
+                required
+              />
+            </div>
+            <div class="invalid-feedback">
+              Ingresá una cantidad válida
+            </div>
           </div>
-        </div>
 
-        <!-- Fecha -->
-        <div class="mb-2">
-          <label class="form-label small">Fecha</label>
-          <input
-            type="date"
-            class="form-control form-control-sm"
-            id="inventoryDate"
-          />
-        </div>
-
-        <!-- Observación -->
-        <div class="mb-2">
-          <label class="form-label small">Observación</label>
-          <textarea
-            class="form-control form-control-sm"
-            id="inventoryNote"
-            rows="2"
-            placeholder="Opcional"
-          ></textarea>
+          <!-- Cantidad en área de ventas -->
+          <div class="mb-3 flex-grow-1">
+            <label class="form-label small">Área de ventas</label>
+            <div class="input-group input-group-sm rounded-pill overflow-hidden border">
+              <span class="input-group-text bg-success text-white border-0 px-4">
+                <i class="bi bi-shop-window"></i>
+              </span>
+              <input
+                type="number"
+                id="locationStoreInput"
+                class="form-control border-0 rounded-0"
+                placeholder="Cantidad..."
+                min="0"
+                required
+              />
+            </div>
+            <div class="invalid-feedback">
+              Ingresá una cantidad válida
+            </div>
+          </div>
         </div>
 
       </div>
@@ -129,8 +93,6 @@
           Confirmar
         </button>
       </div>
-
     </div>
   </div>
 </div>
-
