primera version de la contabilidad

--- a/layout.html
+++ b/layout.html
@@ -237,6 +237,16 @@
             <small>Inventario</small>
           </div>
         </button>
+        <!-- CONTABILIDAD -->
+        <button
+          class="btn btn-link rounded-pill text-decoration-none bottom-nav-btn"
+          id="navAccounting"
+        >
+          <div class="text-center">
+            <i class="bi bi-calculator fs-4"></i><br />
+            <small>Contabilidad</small>
+          </div>
+        </button>
         <!-- SETTINGS -->
         <button
           class="btn btn-link rounded-pill text-decoration-none bottom-nav-btn"
@@ -265,6 +275,7 @@
     
     <!-- Páginas compartidas JS -->
     <script src="shared/js/home.js"></script>
+    <script src="shared/js/accounting.js"></script>
     <script src="shared/js/settings.js"></script>
     
     <!-- Módulos JS -->
