--- a/shared/pages/settings.html
+++ b/shared/pages/settings.html
@@ -66,4 +66,32 @@
       <!-- Se llenan dinámicamente -->
     </div>
   </div>
+
+  <!-- Sección: Porcentaje de Salario -->
+  <div class="mb-4">
+    <div class="d-flex align-items-center gap-2 mb-3">
+      <i class="bi bi-percent text-primary fs-5"></i>
+      <h6 class="mb-0 fw-semibold">Porcentaje de Salario</h6>
+    </div>
+
+    <div class="d-flex gap-2 align-items-center">
+      <input
+        type="number"
+        class="form-control form-control-sm rounded-pill"
+        id="inputSalaryPercentage"
+        placeholder="1.7"
+        min="0"
+        max="100"
+        step="0.1"
+      />
+      <span class="text-muted">%</span>
+      <button
+        class="btn btn-primary rounded-pill btn-sm"
+        id="btnSaveSalaryPercentage"
+      >
+        Guardar
+      </button>
+    </div>
+    <small class="text-muted">Porcentaje utilizado para calcular el salario del vendedor</small>
+  </div>
 </div>
