--- a/shared/pages/settings.html
+++ b/shared/pages/settings.html
@@ -1,6 +1,4 @@
 <div class="container-fluid px-3 py-3 mt-5">
-  
-
   <!-- Sección: Unidades de Medida -->
   <div class="mb-4">
     <div class="d-flex align-items-center gap-2 mb-3">
@@ -22,7 +20,7 @@
       <button
         class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
         id="btnAddUnit"
-        style="width: 40px; height: 40px; flex-shrink: 0;"
+        style="width: 40px; height: 40px; flex-shrink: 0"
       >
         <i class="bi bi-plus fs-5"></i>
       </button>
@@ -55,7 +53,7 @@
       <button
         class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
         id="btnAddConcept"
-        style="width: 40px; height: 40px; flex-shrink: 0;"
+        style="width: 40px; height: 40px; flex-shrink: 0"
       >
         <i class="bi bi-plus fs-5"></i>
       </button>
@@ -74,24 +72,36 @@
       <h6 class="mb-0 fw-semibold">Porcentaje de Salario</h6>
     </div>
 
-    <div class="d-flex gap-2 align-items-center">
-      <input
-        type="number"
-        class="form-control form-control-sm rounded-pill"
-        id="inputSalaryPercentage"
-        placeholder="1.7"
-        min="0"
-        max="100"
-        step="0.1"
-      />
-      <span class="text-muted">%</span>
+
+    <div class="d-flex gap-2">
+      <div class="flex-grow-1 d-inline-flex">
+        <div
+          class="input-group input-group rounded-pill overflow-hidden border"
+        >
+          <input
+            type="number"
+            class="form-control form-control px-3"
+            id="inputSalaryPercentage"
+            placeholder="1.7"
+            min="0"
+            max="100"
+            step="0.1"
+          />
+          <span class="input-group-text bg-primary text-white border-0 px-3">
+            <i class="bi bi-percent"></i>
+          </span>
+        </div>
+      </div>
       <button
-        class="btn btn-primary rounded-pill btn-sm"
-        id="btnSaveSalaryPercentage"
-      >
-        Guardar
-      </button>
+          class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
+          id="btnSaveSalaryPercentage"
+          style="width: 40px; height: 40px; flex-shrink: 0"
+        >
+          <i class="bi bi-floppy fs-5"></i>
+        </button>
     </div>
-    <small class="text-muted">Porcentaje utilizado para calcular el salario del vendedor</small>
+
+    <small class="text-muted px-3"> Porcentaje utilizado para calcular el salario del vendedor </small
+    >
   </div>
 </div>
