Cambios en las configuraciones: -add mensajes informativos debajo de los nombres de las secciones -error de validacion del campo de pct salario no se muestra en snackbar sino con texto rojo debajo del campo

--- a/shared/pages/accounting.html
+++ b/shared/pages/accounting.html
@@ -138,20 +138,20 @@
     </div>
     <div class="card-body">
       <div class="d-flex justify-content-between align-items-center mb-2">
-        <span><i class="bi bi-percent"></i> % Pago</span>
+        <span><i class="bi bi-percent"></i> Porcentaje de Pago</span>
         <span class="fw-semibold" id="salaryPercentage">1.7%</span>
       </div>
       <div class="d-flex justify-content-between align-items-center mb-2">
-        <span><i class="bi bi-wallet2"></i> Salario Nominal</span>
-        <span class="fw-semibold text-success" id="nominalSalary">$0.00</span>
+        <span><i class="bi bi-wallet2 text-primary"></i> Salario Nominal</span>
+        <span class="fw-semibold text-primary" id="nominalSalary">$0.00</span>
       </div>
       <div class="d-flex justify-content-between align-items-center mb-2">
-        <span><i class="bi bi-calculator"></i> Diferencia</span>
-        <span class="fw-semibold" id="salaryDifference">$0.00</span>
+        <span><i class="bi bi-dash-circle text-danger"></i> Diferencia</span>
+        <span class="fw-semibold text-danger" id="salaryDifference">$0.00</span>
       </div>
       <div class="d-flex justify-content-between align-items-center">
-        <span><i class="bi bi-wallet2"></i> Salario Real</span>
-        <span class="fw-semibold text-primary" id="realSalary">$0.00</span>
+        <span><i class="bi bi-wallet2 text-success"></i> Salario Real</span>
+        <span class="fw-semibold text-success" id="realSalary">$0.00</span>
       </div>
     </div>
   </div>
