Refactor del Inventario: -Add lista de Parciales -Mostrar la cantidad en stock por producto en el modal y en las cards de productos -Validaciones: la suma de cant. de almacen + cant. de tienda no supera la cant. total en stock¨ -Los valores de cantidades no pueden ser negativos -Mostrar mensajes de error de feedback -Productos con stock cero van directo a la lista de Completados con todas las cantidades en cero y boton de eliminar deshabilitado

--- a/layout.html
+++ b/layout.html
@@ -233,7 +233,7 @@
           id="navInventory"
         >
           <div class="text-center">
-            <i class="bi bi-clipboard-check fs-4"></i><br />
+            <i class="bi bi-clipboard-data fs-4"></i><br />
             <small>Inventario</small>
           </div>
         </button>
