--- a/shared/pages/accounting.html
+++ b/shared/pages/accounting.html
@@ -77,7 +77,7 @@
       <!-- Ventas en Efectivo -->
       <div class="d-flex justify-content-between align-items-center mb-3 p-2 border rounded">
         <div class="d-flex align-items-center gap-2">
-          <i class="bi bi-cash-coin text-success fs-5"></i>
+          <i class="bi bi-cash text-success fs-5"></i>
           <span class="fw-semibold">Efectivo</span>
           <span class="text-success" id="cashSalesAmount">$0.00</span>
         </div>
@@ -89,7 +89,7 @@
       <!-- Ventas por Transferencia -->
       <div class="d-flex justify-content-between align-items-center mb-3 p-2 border rounded">
         <div class="d-flex align-items-center gap-2">
-          <i class="bi bi-bank text-success fs-5"></i>
+          <i class="bi bi-credit-card text-success fs-5"></i>
           <span class="fw-semibold">Transferencia</span>
           <span class="text-success" id="transferSalesAmount">$0.00</span>
         </div>
@@ -123,7 +123,7 @@
         <span class="text-success fw-semibold" id="closingTotalSales">$0.00</span>
       </div>
       <div class="d-flex justify-content-between align-items-center">
-        <span><i class="bi bi-calculator"></i> Diferencia</span>
+        <span><i class="bi bi-dash-circle text-danger"></i> Diferencia</span>
         <span class="fw-semibold" id="closingDifference">$0.00</span>
       </div>
     </div>
